--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,13 @@
 body{
-    border-top: 3px solid #0097e6;
+}
+
+.rainbow{
+    height: 4px;
+    background: red; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left, orange , yellow, green, cyan, blue, violet); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, orange, yellow, green, cyan, blue, violet); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, orange, yellow, green, cyan, blue, violet); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, orange , yellow, green, cyan, blue, violet); /* Standard syntax (must be last) */
 }
 
 .condado{
@@ -88,7 +96,7 @@ h4.card-name{
 footer{
 	text-align: center;
 }
-footer .footer-rainbow{
+footer .rainbow{
     height: 4px;
     background: red; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(left, orange , yellow, green, cyan, blue, violet); /* For Safari 5.1 to 6.0 */
